--- a/asterisk-files/manager_custom.conf
+++ b/asterisk-files/manager_custom.conf
@@ -1,7 +1,7 @@
 [wombat]
 secret = fop222
 deny = 0.0.0.0/0.0.0.0
-permit = 172.16.20.0/255.255.255.0,127.0.0.1/255.255.255.255
+permit = 127.0.0.1/255.255.255.255
 read = all
 write = all
 
