puerto AIO + alias=MY_IP_ADDR

--- a/kamailio-files/kamailio.cfg
+++ b/kamailio-files/kamailio.cfg
@@ -180,7 +180,7 @@ children=4
 #auto_aliases=no
 
 # add local domain aliases 
-alias="omnileads-voip.example.com"
+alias="MY_IP_ADDR"
 
 # uncomment and configure the following line if you want Kamailio to 
 #   bind on a specific interface/port/proto (default bind on all available) 
@@ -196,7 +196,7 @@ listen=MY_MSRPTCP_ADDR
 #!endif
 
 # port to listen to * - can be specified more than once if needed to listen on many ports 
-port=5060
+port=15060
 
 #!ifdef WITH_TLS
 enable_tls=yes
@@ -232,7 +232,7 @@ pstn.gw_port="5160"
 asterisk.bindip = "MY_ASTERISK" desc "Asterisk IP Address"
 asterisk.bindport = "5160" desc "Asterisk Port"
 kamailio.bindip = "MY_IP_ADDR" desc "Kamailio IP Address"
-kamailio.bindport = "5060" desc "Kamailio Port"
+kamailio.bindport = "15060" desc "Kamailio Port"
 
 
 #################################### Modules Section ####################################
@@ -835,6 +835,7 @@ route[AUTH] {
 	# if caller is not local subscriber, then check if it calls
 	# a local destination, otherwise deny, not an open relay here
 	if (from_uri!=myself && uri!=myself) {
+		xlog("L_INFO","the caller is POMELOOOO  $fu \n");
 		sl_send_reply("403","Not relaying");
 		exit;
 		}
