--- a/kamailio-files/kamailio.cfg
+++ b/kamailio-files/kamailio.cfg
@@ -11,12 +11,12 @@
 #!define WITH_MSRP
 
 #!substdef "!MY_IP_ADDR!10.100.100.109!g"
-#!substdef "!MY_DOMAIN!omnileads.example.com!g"
-#!substdef "!MY_UDP_PORT!15060!g"
-#!substdef "!MY_TCP_PORT!15060!g"
-#!substdef "!MY_TLS_PORT!15061!g"
+#!substdef "!MY_DOMAIN!kamailio-fts.example.com!g"
+#!substdef "!MY_UDP_PORT!5060!g"
+#!substdef "!MY_TCP_PORT!5060!g"
+#!substdef "!MY_TLS_PORT!5061!g"
 #!substdef "!MY_WS_PORT!1080!g"
-#!substdef "!MY_WSS_PORT!10443!g"
+#!substdef "!MY_WSS_PORT!443!g"
 #!substdef "!MY_MSRP_PORT!6060!g"
 #!substdef "!MY_MSRPTCP_PORT!6061!g"
 #!substdef "!MY_ASTERISK!10.100.100.109!g"
@@ -180,7 +180,7 @@ children=4
 #auto_aliases=no
 
 # add local domain aliases 
-alias="MY_IP_ADDR"
+alias="oml-fpbx14.example.com"
 
 # uncomment and configure the following line if you want Kamailio to 
 #   bind on a specific interface/port/proto (default bind on all available) 
@@ -196,7 +196,7 @@ listen=MY_MSRPTCP_ADDR
 #!endif
 
 # port to listen to * - can be specified more than once if needed to listen on many ports 
-port=15060
+port=5060
 
 #!ifdef WITH_TLS
 enable_tls=yes
@@ -232,7 +232,7 @@ pstn.gw_port="5160"
 asterisk.bindip = "MY_ASTERISK" desc "Asterisk IP Address"
 asterisk.bindport = "5160" desc "Asterisk Port"
 kamailio.bindip = "MY_IP_ADDR" desc "Kamailio IP Address"
-kamailio.bindport = "15060" desc "Kamailio Port"
+kamailio.bindport = "5060" desc "Kamailio Port"
 
 
 #################################### Modules Section ####################################
@@ -835,7 +835,6 @@ route[AUTH] {
 	# if caller is not local subscriber, then check if it calls
 	# a local destination, otherwise deny, not an open relay here
 	if (from_uri!=myself && uri!=myself) {
-		xlog("L_INFO","the caller is POMELOOOO  $fu \n");
 		sl_send_reply("403","Not relaying");
 		exit;
 		}
