--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -79,7 +79,7 @@ same => n,Set(__CALLFILENAME=out-${STRFTIME(${EPOCH},,%Y%m%d%H%M%S)}-${MIXQ}-${C
 same => n,Set(CALLERID(name)=${QDIALER_QUEUE})
 same => n,MixMonitor(${CALLFILENAME},b,/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${CALLFILENAME})
 same => n,Set(QueueName=${QDIALER_QUEUE})
-same => n,Gosub(find-route-number,${EXTEN},1)
+;same => n,Gosub(find-route-number,${EXTEN},1)
 same => n,Goto(qlog-queuedial,${EXTEN},1)
 
 [qlog-queuedial]
