--- a/kamailio-files/kamailio.cfg
+++ b/kamailio-files/kamailio.cfg
@@ -10,16 +10,16 @@
 #!define WITH_XCAPSRV
 #!define WITH_MSRP
 
-#!substdef "!MY_IP_ADDR!10.100.100.109!g"
+#!substdef "!MY_IP_ADDR!172.16.20.179!g"
 #!substdef "!MY_DOMAIN!kamailio-fts.example.com!g"
 #!substdef "!MY_UDP_PORT!5060!g"
 #!substdef "!MY_TCP_PORT!5060!g"
 #!substdef "!MY_TLS_PORT!5061!g"
 #!substdef "!MY_WS_PORT!1080!g"
-#!substdef "!MY_WSS_PORT!443!g"
+#!substdef "!MY_WSS_PORT!14443!g"
 #!substdef "!MY_MSRP_PORT!6060!g"
 #!substdef "!MY_MSRPTCP_PORT!6061!g"
-#!substdef "!MY_ASTERISK!10.100.100.109!g"
+#!substdef "!MY_ASTERISK!172.16.20.179!g"
 #!substdef "!MY_DB!127.0.0.1!g"
 
 
@@ -180,7 +180,7 @@ children=4
 #auto_aliases=no
 
 # add local domain aliases 
-alias="oml-fpbx14.example.com"
+alias="oml-centos.example.com"
 
 # uncomment and configure the following line if you want Kamailio to 
 #   bind on a specific interface/port/proto (default bind on all available) 
