--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -231,7 +231,10 @@ exten => s,1,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|sa
 
 [click2call]
 exten => _XXXX,1,NoOp(llamada de click2call)
+same => n,GotoIf($["${click2callPreview}" == "true"]?preview)
+same => n,DumpChan
 same => n,SIPAddHeader(Origin:CLICK2CALL)
+same => n(preview),SIPAddHeader(Origin:CLICK2CALLPREVIEW)
 same => n,SIPAddHeader(IDCliente:${codCli})
 same => n,SIPAddHeader(IDCamp:${IdCamp})
 same => n,Dial(SIP/${EXTEN},15,tT)
