quitar nombre campana de grabacion

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -75,7 +75,7 @@ same => n,Set(MIXAG=${REPLACE(QDIALER_AGENT, ,_)})
 same => n,Set(MIXAG=${REPLACE(QDIALER_AGENT,"'",)})
 same => n,Set(MIXQ=${REPLACE(QDIALER_QUEUE, ,_)})
 same => n,Set(MIXDEST=${EXTEN})
-same => n,Set(__CALLFILENAME=out-${STRFTIME(${EPOCH},,%Y%m%d%H%M%S)}-${MIXQ}-${CALLERID(num)}-${MIXDEST}-${UNIQUEID}.wav)
+same => n,Set(__CALLFILENAME=out-${STRFTIME(${EPOCH},,%Y%m%d%H%M%S)}-${IDCampManualCall}-${CALLERID(num)}-${MIXDEST}-${UNIQUEID}.wav)
 same => n,Set(CALLERID(name)=${QDIALER_QUEUE})
 same => n,MixMonitor(${CALLFILENAME},b,/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${CALLFILENAME})
 same => n,Set(QueueName=${QDIALER_QUEUE})
@@ -576,44 +576,3 @@ same => n,Hangup()
 
 exten => 0,1,Verbose(2, callback)
 same => n,Goto(s,1)
-
-
-
-
-;  FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS
-;  FTS FTS FTS FTS FTS FTS     WOMBAT DIALER DALPLAN   FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS
-;  FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS
-
-; por aca se disca hacia afuera
-;[from-wombat-genericas]
-;exten => _X.,1,NoOp(wombat dialer caller-id-es ${CUT(CONTEXT,-,2)})
-;same => n,NoOp(${GRUPO})
-;same => n,Dial(SIP/test/${EXTEN},45,tTB(hangup-fts^llamante_handler^1)b(hangup-fts^llamado_handler^1))
-;same => n,Hangup()
-
-[from-wombat-general-contact]
-exten => 098098,1,NoOp(Wombat Dialer Queue)
-same => n,Background(silence/1)
-same => n,GotoIf($["${USA_CONTESTADOR}" != "True"]?noamd)
-same => n,AMD()
-same => n,NoOp(AMDSTATUS=${AMDSTATUS})
-same => n,GotoIf($["${AMDSTATUS}" == "MACHINE"]?amd_machine)
-same => n(noamd),NoOp(hay un humano por alli)
-same => n,Set(AUX=${CUT(CHANNEL,@,1)})
-same => n,Set(NUMMARCADO=${CUT(AUX,/,2)})
-same => n,Set(__MONITOR_FILENAME=q-${STRFTIME(${EPOCH},,%Y%m%d%H%M%S)}-${CAMPANA}-${NUMMARCADO}-${UNIQUEID})
-same => n,Set(__MONITOR_EXEC=/usr/local/parselog/update_mix_mixmonitor.pl ^{UNIQUEID} ^{MIXMONITOR_FILENAME})
-same => n,Set(__TIPOLLAMADA=DIALER)
-same => n,SIPAddHeader(WombatID:${WOMBAT_HOPPER_ID})
-same => n,SIPAddHeader(Origin:DIALER)
-same => n,SIPAddHeader(IDCliente:${ID_CLIENTE})
-same => n,SIPAddHeader(IDCamp:${ID_CAMPANA})
-same => n,MixMonitor(${MONITOR_FILENAME}.wav,b)
-same => n,Set(CALLERID(num)=${NUMMARCADO})
-same => n,Gosub(hangup-fts,llamado_handler,1)
-same => n,Queue(${CAMPANA},tTc,,,${TIMEOUT})
-same => n,Hangup()
-same => n(amd_machine),NoOp(es una maquina)
-same => n,UserEvent(CALLSTATUS,Uniqueid:${UNIQUEID},V:CONTESTADOR)
-same => n,SET(CDR(userfield)=CONTESTADOR)
-same => n,Hangup()
