dialplan campanas preview

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -18,10 +18,12 @@ same => n,Noop(Veo si la llamada saliente la procesa Asternic)
 same => n,Noop(Veo si la llamada saliente la procesa Asternic)
 same => n,NoOp(id campana asociada ${SIP_HEADER(Idcamp)})
 same => n,NoOp(nombre campana asociada ${SIP_HEADER(Nomcamp)})
+same => n,NoOp(${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)})
 same => n,GotoIf($["${SIP_HEADER(Nomcamp)}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
 ;same => n,GotoIf($["${CAMPANA}" != ""]?:noCamp) ; esto se hace con nombre_campaña llamada dialer
 same => n,Noop(No es MANUALCALL por ende reviso si es CLICK2CALL)
-same => n,GotoIf($["${nomCamp}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
+;same => n,DumpChan
+same => n,GotoIf($["${CAMPANA}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
 same => n,Noop(NO HAY nombre_campaña, salgo de aqui y sigo por el extensions_additional.conf)
 same => n,Noop(NO HAY nombre_campaña, salgo de aqui y sigo por el extensions_additional.conf)
 same => n,MacroExit()
@@ -48,7 +50,9 @@ same => n,GotoIf($["${QDIALER_AGENT}" != ""]?nextcheck)
 same => n,Noop(NO AGENT?, exit normally with no tracking outbound)
 same => n,MacroExit()
 same => n,NoOp(compruebo si hay una cola asignada a la llamada, sino no disco !!! 
-same => n(nextcheck),GotoIf($["${QDIALER_QUEUE}" != ""]?bypass)
+same => n(nextcheck),GotoIf($["${click2callPreview}" == "true"]?:prevFALSE)
+same => n,Set(QDIALER_QUEUE=${CAMPANA})
+same => n(prevFALSE),GotoIf($["${QDIALER_QUEUE}" != ""]?bypass)
 same => n,Noop(NO QUEUE, exit normally with no tracking outbound)
 same => n,MacroExit()
 same => n(bypass),Set(PREDIAL_HOOK_RET=BYPASS)
@@ -66,6 +70,7 @@ same => n(corte),Hangup()
 ; outbound dialing - replace as needed - just fill in the same variables.
 exten => _X.,1,Noop(QDIALER_QUEUE ${QDIALER_QUEUE})
 same => n,Noop(QDIALER_AGENT ${QDIALER_AGENT})
+same => n,GotoIf($["${click2callPreview}" == "true"]?prevCALL)
 same => n,Set(__RECMANUALCALL=${QDIALER_QUEUE}-${UNIQUEID}.wav)
 same => n,Set(__CODCLI=${SIP_HEADER(Codcli)})
 same => n,Set(__IDCampManualCall=${SIP_HEADER(Idcamp)})
@@ -81,6 +86,25 @@ same => n,MixMonitor(${CALLFILENAME},b,/usr/local/parselog/update_mix_mixmonitor
 same => n,Set(QueueName=${QDIALER_QUEUE})
 ;same => n,Gosub(find-route-number,${EXTEN},1)
 same => n,Goto(qlog-queuedial,${EXTEN},1)
+; prev call
+same => n(prevCALL),Verbose(2, es llamada preview)
+same => n,Set(__RECMANUALCALL=${QDIALER_QUEUE}-${UNIQUEID}.wav)
+same => n,Set(__CODCLI=${SIP_HEADER(Codcli)})
+same => n,Set(__IDCampManualCall=${SIP_HEADER(Idcamp)})
+same => n,Set(__TIPOLLAMADA=PREVIEW)
+same => n(seguir),Set(QDIALER_CHANNEL=${OUT_${DIAL_TRUNK}}/${EXTEN})
+same => n,Set(MIXAG=${REPLACE(QDIALER_AGENT, ,_)})
+same => n,Set(MIXAG=${REPLACE(QDIALER_AGENT,"'",)})
+same => n,Set(MIXQ=${REPLACE(QDIALER_QUEUE, ,_)})
+same => n,Set(MIXDEST=${EXTEN})
+same => n,Set(__IDCampPrev=${IdCamp})
+same => n,Set(__CALLFILENAME=out-${STRFTIME(${EPOCH},,%Y%m%d%H%M%S)}-${IdCamp}-${CALLERID(num)}-${MIXDEST}-${UNIQUEID}.wav)
+same => n,Set(CALLERID(name)=${QDIALER_QUEUE})
+same => n,MixMonitor(${CALLFILENAME},b,/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${CALLFILENAME})
+same => n,Set(QueueName=${QDIALER_QUEUE})
+;same => n,Gosub(find-route-number,${EXTEN},1)
+same => n,Goto(qlog-queuedial,${EXTEN},1)
+
 
 [qlog-queuedial]
 ; We use a global variable to pass values back from the answer-detect macro.
@@ -431,6 +455,7 @@ same => n,NoOp(hangup canal llamado tipo de llamada ------> DIALER o MANUALCALL)
 same => n,NoOp(hangup canal llamado tipo de llamada ------> DIALER o MANUALCALL)
 same => n,GotoIf($["${TIPOLLAMADA}" == "MANUALCALL"]?manual)
 same => n,GotoIf($["${TIPOLLAMADA}" == "DIALER"]?dialer)
+same => n,GotoIf($["${TIPOLLAMADA}" == "PREVIEW"]?preview)
 same => n,Hangup()
 same => n(dialer),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
 same => n,AGI(omni-grabaciones.php,2,${ID_CLIENTE},${NUMMARCADO},${MEMBERINTERFACE:4},${MONITOR_FILENAME}.wav,${ID_CAMPANA},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
@@ -438,11 +463,20 @@ same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONI
 same => n,Hangup()
 same => n(manual),NoOp(GRA:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
 same => n,NoOp(Estado del canal: ${CHANNEL(State)})
-same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendio)
+same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioManual)
 same => n,Hangup()
-same => n(atendio),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CALLFILENAME},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n(preview),NoOp(GRAPREV:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
+same => n,NoOp(Estado del canal: ${CHANNEL(State)})
+same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioPrev)
+same => n,Hangup()
+same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CALLFILENAME},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
+same => n(atendioPrev),DumpChan
+same => n,AGI(omni-grabaciones.php,5,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CALLFILENAME},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
+same => n,Hangup()
+
 
 ;  FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS
 ;  FTS FTS FTS FTS FTS FTS     SUPERVISION DALPLAN   FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS
