--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -249,7 +249,13 @@ exten => s,n,NoOp("Macro queuedial-answer terminating" )
 ;            $ARG8: Param3
 ;
 ;exten => s,1,System( echo "${ARG1},${ARG2},${ARG3,${ARG4},${ARG5},${ARG6},${ARG7},${ARG8}" >> /var/log/asterisk/queue_log )
-exten => s,1,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|saliente)
+exten => s,1,GotoIf($["${TIPOLLAMADA}" == "PREVIEW"]?prev,1)
+same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|saliente)
+
+exten => prev,1,Verbose(2, queuelog para camp prev)
+same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|preview)
+
+
 
 #exec /usr/bin/php /usr/local/parselog/generate_outbound_route_context.php
 
@@ -309,11 +315,11 @@ same => n,Set(COUNTER=${INC(COUNTER)})
 same => n,EndWhile()
 same => n,ODBCFinish()
 same => n,QueueLog(ALL,${UNIQUEID},${AGENTNAME},ADDMEMBER)
-same => n,Playback(silence/1&agent-loginok)
+same => n,Playback(silence/1&oml/agente-ok)
 same => n,Hangup()
 
 exten => no_rows,1,Verbose(1,No rows returned)
-same => n,Playback(silence/1&channel&not-yet-assigned)
+same => n,Playback(silence/1&oml/agente-ok-no-campaign)
 same => n,Hangup()
 
 ; Logoff
@@ -393,7 +399,7 @@ same => n,Set(DB(PAUSECUSTOM/AGENT/${CALLERID(num)})=${PAUSETYPE}:${EPOCH})
 same => n,Set(DB(fop2state/SIP/${CALLERID(num)})=${PAUSETYPE})
 same => n,UserEvent(FOP2ASTDB,Family: fop2state,Channel: SIP/${CALLERID(num)},Value: ${PAUSETYPE})
 same => n,QueueLog(ALL,${UNIQUEID},${AGENTNAME},PAUSEALL,${PAUSETYPE})
-same => n,Playback(silence/1&unavailable)
+same => n,Playback(silence/1&oml/agente-pausa)
 same => n,Hangup()
 
 ; Salir de Pausa
@@ -409,11 +415,11 @@ same => n,DBDel(PAUSECUSTOM/AGENT/${CALLERID(num)})
 same => n,DBDel(fop2state/SIP/${CALLERID(num)})
 same => n,UserEvent(FOP2ASTDB,Family: fop2state,Channel: SIP/${CALLERID(num)},Value: )
 same => n,QueueLog(ALL,${UNIQUEID},${AGENTNAME},UNPAUSEALL)
-same => n,Playback(silence/1&available)
+same => n,Playback(silence/1&oml/agente-disponible)
 same => n,Hangup()
 
 exten => agent_not_found,1,Verbose(2,Agent was not found)
-same => n,Playback(silence/1&cannot-complete-as-dialed)
+same => n,Playback(silence/1&oml/agente-no-campaign)
 
 exten => 0077REMOVE,1,NoOp(agente ${CALLERID(num)} removido)
 same => n,NoOp(${CALLERID(num)} removido del sistema)
@@ -529,7 +535,7 @@ exten => agent_paused,1,Verbose(2,Agent paused successfully)
 same => n,Set(DB(PAUSECUSTOM/AGENT/${EXTEN:3})=${PAUSETYPE}:${EPOCH})
 same => n,Set(DB(fop2state/SIP/${EXTEN:3})=${PAUSETYPE})
 same => n,UserEvent(FOP2ASTDB,Family: fop2state,Channel: SIP/${EXTEN:3},Value: ${PAUSETYPE})
-same => n,Playback(silence/1&unavailable)
+same => n,Playback(silence/1&oml/agente-pausa)
 same => n,Hangup()
 
 exten => _005X.,1,NoOp(Tomar llamada)
@@ -554,7 +560,7 @@ exten => agent_unpaused,1,Verbose(2,Agent paused successfully)
 same => n,DBDel(PAUSECUSTOM/AGENT/${EXTEN:3})
 same => n,DBDel(fop2state/SIP/${EXTEN:3})
 same => n,UserEvent(FOP2ASTDB,Family: fop2state,Channel: SIP/${EXTEN:3},Value: )
-same => n,Playback(silence/1&available)
+same => n,Playback(silence/1&oml/agente-disponible)
 same => n,Hangup()
 
 exten => agent_not_found,1,Verbose(2,Agent was not found)
