grabaciones mp3 y queue_log con preview in manual y dialer

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -20,9 +20,7 @@ same => n,NoOp(id campana asociada ${SIP_HEADER(Idcamp)})
 same => n,NoOp(nombre campana asociada ${SIP_HEADER(Nomcamp)})
 same => n,NoOp(${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)})
 same => n,GotoIf($["${SIP_HEADER(Nomcamp)}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
-;same => n,GotoIf($["${CAMPANA}" != ""]?:noCamp) ; esto se hace con nombre_campaña llamada dialer
 same => n,Noop(No es MANUALCALL por ende reviso si es CLICK2CALL)
-;same => n,DumpChan
 same => n,GotoIf($["${CAMPANA}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
 same => n,Noop(NO HAY nombre_campaña, salgo de aqui y sigo por el extensions_additional.conf)
 same => n,Noop(NO HAY nombre_campaña, salgo de aqui y sigo por el extensions_additional.conf)
@@ -41,6 +39,7 @@ same => n,Set(QDIALER_AGENT=${CALLERID(name)})
 same => n,Set(QDIALER_QUEUE=${SIP_HEADER(Nomcamp)}) ; esto se hace con nombre_campaña
 ; aqui se sigue con el discado, sea una manual call o discador
 same => n(seguirDial),Set(PREDIAL_HOOK_RET=BYPASS)
+same => n,Set(CHANNEL(hangup_handler_push)=canal-llamado,s,1)
 same => n,Set(DIAL_PREFIX=${DB(dialprefix/${QDIALER_QUEUE})})
 same => n,Noop(Trunk is ${OUT_${DIAL_TRUNK}})
 same => n,Noop(Dialout number is ${OUTNUM})
@@ -454,7 +453,7 @@ same => n,AGI(omni-grabaciones.php,3,${DNI},${CALLERID(num)},${MEMBERINTERFACE:4
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
 
-; por el canal llamado saco info de las llamadas manuales, PRE e ICS para luego mandar al WS
+; por el canal llamado saco info de las llamadas para insertar grabaciones en OML
 [canal-llamado]
 exten => s,1,NoOp(hangup canal llamado tipo de llamada ------> DIALER o MANUALCALL)
 same => n,NoOp(hangup canal llamado tipo de llamada ------> DIALER o MANUALCALL)
@@ -462,26 +461,37 @@ same => n,NoOp(hangup canal llamado tipo de llamada ------> DIALER o MANUALCALL)
 same => n,GotoIf($["${TIPOLLAMADA}" == "MANUALCALL"]?manual)
 same => n,GotoIf($["${TIPOLLAMADA}" == "DIALER"]?dialer)
 same => n,GotoIf($["${TIPOLLAMADA}" == "PREVIEW"]?preview)
+same => n,GotoIf($["${TIPOLLAMADA}" == "IN"]?inbound)
 same => n,Hangup()
 same => n(dialer),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
-same => n,AGI(omni-grabaciones.php,2,${ID_CLIENTE},${NUMMARCADO},${MEMBERINTERFACE:4},${MONITOR_FILENAME}.wav,${ID_CAMPANA},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA})
+same => n,AGI(omni-grabaciones.php,2,${ID_CLIENTE},${NUMMARCADO},${MEMBERINTERFACE:4},${MONITOR_FILENAME},${ID_CAMPANA},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
+same => n,Hangup()
+same => n(inbound),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
+same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA})
+same => n,AGI(omni-grabaciones.php,3,${ID_CLIENTE},${CALLERID(num)},${MEMBERINTERFACE:4},${MONITOR_FILENAME:28},${SIPADDHEADER04:7},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME:28}.wav)
+same => n,Hangup()
+same => n(preview),NoOp(GRAPREV:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
+same => n,NoOp(Estado del canal: ${CHANNEL(State)})
+same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioPrev)
+same => n,Hangup()
+same => n(atendioPrev),AGI(omni-grabaciones.php,5,${codCli},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
 same => n(manual),NoOp(GRA:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
 same => n,NoOp(Estado del canal: ${CHANNEL(State)})
 same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioManual)
 same => n,Hangup()
-same => n(preview),NoOp(GRAPREV:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
-same => n,NoOp(Estado del canal: ${CHANNEL(State)})
-same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioPrev)
+same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${CALLFILENAME})
 same => n,Hangup()
-same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CALLFILENAME},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
-same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
-same => n,Hangup()
-same => n(atendioPrev),DumpChan
-same => n,AGI(omni-grabaciones.php,5,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CALLFILENAME},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
-same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
-same => n,Hangup()
+
+[queuelogSub]
+exten => s,1,Verbose(2, voy a queueloguear que se atendio una llamada)
+same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CONNECT,${QEHOLDTIME}|${UNIQUEID}||${TIPOLLAMADA})
+same => n,Return()
 
 
 ;  FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS FTS
