formato grabaciones BD

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -484,7 +484,7 @@ same => n(manual),NoOp(GRA:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - 
 same => n,NoOp(Estado del canal: ${CHANNEL(State)})
 same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioManual)
 same => n,Hangup()
-same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)}.${MONITORFORMAT},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${CALLFILENAME})
 same => n,Hangup()
 
