formato grabaciones agi

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -465,19 +465,19 @@ same => n,GotoIf($["${TIPOLLAMADA}" == "IN"]?inbound)
 same => n,Hangup()
 same => n(dialer),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
 same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA})
-same => n,AGI(omni-grabaciones.php,2,${ID_CLIENTE},${NUMMARCADO},${MEMBERINTERFACE:4},${MONITOR_FILENAME},${ID_CAMPANA},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,AGI(omni-grabaciones.php,2,${ID_CLIENTE},${NUMMARCADO},${MEMBERINTERFACE:4},${MONITOR_FILENAME}.${MONITORFORMAT},${ID_CAMPANA},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
 same => n(inbound),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
 same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA})
-same => n,AGI(omni-grabaciones.php,3,${ID_CLIENTE},${CALLERID(num)},${MEMBERINTERFACE:4},${MONITOR_FILENAME:28},${SIPADDHEADER04:7},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n,AGI(omni-grabaciones.php,3,${ID_CLIENTE},${CALLERID(num)},${MEMBERINTERFACE:4},${MONITOR_FILENAME:28}.${MONITORFORMAT},${SIPADDHEADER04:7},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME:28}.wav)
 same => n,Hangup()
 same => n(preview),NoOp(GRAPREV:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
 same => n,NoOp(Estado del canal: ${CHANNEL(State)})
 same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioPrev)
 same => n,Hangup()
-same => n(atendioPrev),AGI(omni-grabaciones.php,5,${codCli},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n(atendioPrev),AGI(omni-grabaciones.php,5,${codCli},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)}.${MONITORFORMAT},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
 same => n(manual),NoOp(GRA:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
