SDES-no para chrome-63

--- a/kamailio-files/kamailio.cfg
+++ b/kamailio-files/kamailio.cfg
@@ -10,7 +10,7 @@
 #!define WITH_XCAPSRV
 #!define WITH_MSRP
 
-#!substdef "!MY_IP_ADDR!172.16.20.179!g"
+#!substdef "!MY_IP_ADDR!192.168.95.110!g"
 #!substdef "!MY_DOMAIN!kamailio-fts.example.com!g"
 #!substdef "!MY_UDP_PORT!5060!g"
 #!substdef "!MY_TCP_PORT!5060!g"
@@ -19,7 +19,7 @@
 #!substdef "!MY_WSS_PORT!14443!g"
 #!substdef "!MY_MSRP_PORT!6060!g"
 #!substdef "!MY_MSRPTCP_PORT!6061!g"
-#!substdef "!MY_ASTERISK!172.16.20.179!g"
+#!substdef "!MY_ASTERISK!192.168.95.110!g"
 #!substdef "!MY_DB!127.0.0.1!g"
 
 
@@ -180,7 +180,7 @@ children=4
 #auto_aliases=no
 
 # add local domain aliases 
-alias="oml-centos.example.com"
+alias="oml-curso.example.com"
 
 # uncomment and configure the following line if you want Kamailio to 
 #   bind on a specific interface/port/proto (default bind on all available) 
@@ -636,7 +636,7 @@ route[SETUP_BY_TRANSPORT] {
             }        
  #       sdp_remove_media("video");
  		xlog("L_INFO", "hola mundo 2 2 2");           
-		rtpengine_manage("trust-address replace-origin replace-session-connection rtcp-mux-offer transport-protocol=UDP/TLS/RTP/SAVPF ICE=force");
+		rtpengine_manage("trust-address replace-origin replace-session-connection rtcp-mux-offer transport-protocol=UDP/TLS/RTP/SAVPF ICE=force SDES-no");
 		t_on_reply("REPLY_FROM_WS");
 	}	
 	else if ($proto =~ "ws") {
