idcamp queuename queue_log camp previre

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -11,14 +11,14 @@ same => n,Hangup()
 
 [macro-dialout-trunk-predial-hook]
 exten => s,1,NoOp(veo el tema blacklist)
+;same => n,DumpChan
 same => n,AGI(omni-blacklist.php,${EXTEN})
 same => n,NoOp(result: ${BLACKLIST})
 same => n,GotoIf($["${BLACKLIST}" == "0"]?:blacklist,1)
 same => n,Noop(Veo si la llamada saliente la procesa Asternic)
 same => n,Noop(Veo si la llamada saliente la procesa Asternic)
 same => n,NoOp(id campana asociada ${SIP_HEADER(Idcamp)})
-same => n,NoOp(nombre campana asociada ${SIP_HEADER(Nomcamp)})
-same => n,NoOp(${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)})
+same => n,NoOp(Nombre de la campaña que manda JS: ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)})
 same => n,GotoIf($["${SIP_HEADER(Nomcamp)}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
 same => n,Noop(No es MANUALCALL por ende reviso si es CLICK2CALL)
 same => n,GotoIf($["${CAMPANA}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
@@ -26,18 +26,10 @@ same => n,Noop(NO HAY nombre_campaña, salgo de aqui y sigo por el extensions_ad
 same => n,Noop(NO HAY nombre_campaña, salgo de aqui y sigo por el extensions_additional.conf)
 same => n,MacroExit()
 ; preparo las variables de canal para avanzar sobre los tipicos dialplans de omnileadsdialplan_oubound_freepbx 
-same => n,NoOp(La llamada se sigue procesando por Omnileads Dialplan - Click2Call)
-same => n,Set(CALLTYPE=dialer)
-same => n,Set(IdCamp = ${ID_CAMPANA})
-same => n,Set(CodCli = ${ID_CLIENTE})
-same => n,Set(QDIALER_AGENT=Discador-${CAMPANA})
-same => n,Set(QDIALER_QUEUE=${CAMPANA})
-same => n,Goto(seguirDial)
-; preparo las variables de canal para avanzar sobre los tipicos dialplans de omnileadsdialplan_oubound_freepbx 
 same => n(okcall),NoOp(La llamada se sigue procesando por Omnileads Dialplan - MANUAL CALL)
 same => n,Set(QDIALER_AGENT=${CALLERID(name)})
 same => n,Set(QDIALER_QUEUE=${SIP_HEADER(Nomcamp)}) ; esto se hace con nombre_campaña
-; aqui se sigue con el discado, sea una manual call o discador
+; aqui se sigue con el discado, sea una manual call o preview
 same => n(seguirDial),Set(PREDIAL_HOOK_RET=BYPASS)
 same => n,Set(CHANNEL(hangup_handler_push)=canal-llamado,s,1)
 same => n,Set(DIAL_PREFIX=${DB(dialprefix/${QDIALER_QUEUE})})
@@ -50,7 +42,7 @@ same => n,Noop(NO AGENT?, exit normally with no tracking outbound)
 same => n,MacroExit()
 same => n,NoOp(compruebo si hay una cola asignada a la llamada, sino no disco !!! 
 same => n(nextcheck),GotoIf($["${click2callPreview}" == "true"]?:prevFALSE)
-same => n,Set(QDIALER_QUEUE=${CAMPANA})
+same => n,Set(QDIALER_QUEUE=${IdCamp}_${CAMPANA})
 same => n(prevFALSE),GotoIf($["${QDIALER_QUEUE}" != ""]?bypass)
 same => n,Noop(NO QUEUE, exit normally with no tracking outbound)
 same => n,MacroExit()
@@ -261,7 +253,6 @@ same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|previ
 [click2call]
 exten => _XXXX,1,NoOp(llamada de click2call)
 same => n,GotoIf($["${click2callPreview}" == "true"]?preview)
-same => n,DumpChan
 same => n,SIPAddHeader(Origin:CLICK2CALL)
 same => n(preview),SIPAddHeader(Origin:CLICK2CALLPREVIEW)
 same => n,SIPAddHeader(IDCliente:${codCli})
