--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -216,7 +216,7 @@ exten => h,n,Hangup()
 ;
 exten => s,1,NoOp("Macro: queuedial-answer UID:${ARG1} GR:${ARG2} Q:${ARG3} A:${ARG4} E:${ARG5}")
 exten => s,n,Set(QDIALER_QUEUE=${ARG3})
-exten => s,n,MixMonitor(out-${QDIALER_QUEUE}-${ARG1}.wav,b,/usr/local/parselog/update_mix_mixmonitor.pl ${ARG1} out-${QDIALER_QUEUE}-${ARG1}.wav)
+;exten => s,n,MixMonitor(out-${QDIALER_QUEUE}-${ARG1}.wav,b,/usr/local/parselog/update_mix_mixmonitor.pl ${ARG1} out-${QDIALER_QUEUE}-${ARG1}.wav)
 exten => s,n,Set(AUDIOHOOK_INHERIT(MixMonitor)=yes)
 exten => s,n,Set(NOW=${EPOCH})
 exten => s,n,Set(WD=$[${NOW} - ${ARG5}])
@@ -468,14 +468,14 @@ same => n(preview),NoOp(GRAPREV:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2
 same => n,NoOp(Estado del canal: ${CHANNEL(State)})
 same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioPrev)
 same => n,Hangup()
-same => n(atendioPrev),AGI(omni-grabaciones.php,5,${codCli},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)}.${MONITORFORMAT},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n(atendioPrev),AGI(omni-grabaciones.php,5,${codCli},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,wav,1)}${MONITORFORMAT},${IDCampPrev},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
 same => n(manual),NoOp(GRA:${CALLFILENAME} - CLI:${CUT(DIALEDPEERNUMBER,/,2)} - AG:SIP/${FROMEXTEN} - CODCLI:${CODCLI})
 same => n,NoOp(Estado del canal: ${CHANNEL(State)})
 same => n,GotoIf($["${CHANNEL(State)}" == "Up"]?atendioManual)
 same => n,Hangup()
-same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,.wav,1)}.${MONITORFORMAT},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
+same => n(atendioManual),AGI(omni-grabaciones.php,4,${DNI},${CUT(DIALEDPEERNUMBER,/,2)},${FROMEXTEN},${CUT(CALLFILENAME,wav,1)}${MONITORFORMAT},${IDCampManualCall},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${CALLFILENAME})
 same => n,Hangup()
 
