extensions_fts_globals y quito mixmonitor de sobra

--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -217,9 +217,9 @@ exten => h,n,Hangup()
 exten => s,1,NoOp("Macro: queuedial-answer UID:${ARG1} GR:${ARG2} Q:${ARG3} A:${ARG4} E:${ARG5}")
 exten => s,n,Set(QDIALER_QUEUE=${ARG3})
 ;exten => s,n,MixMonitor(out-${QDIALER_QUEUE}-${ARG1}.wav,b,/usr/local/parselog/update_mix_mixmonitor.pl ${ARG1} out-${QDIALER_QUEUE}-${ARG1}.wav)
-exten => s,n,Set(AUDIOHOOK_INHERIT(MixMonitor)=yes)
-exten => s,n,Set(NOW=${EPOCH})
-exten => s,n,Set(WD=$[${NOW} - ${ARG5}])
+;exten => s,n,Set(AUDIOHOOK_INHERIT(MixMonitor)=yes)
+;exten => s,n,Set(NOW=${EPOCH})
+;exten => s,n,Set(WD=$[${NOW} - ${ARG5}])
 exten => s,n,Macro(queuelog,${NOW},${ARG1},${ARG3},${ARG4},CONNECT,${WD})
 exten => s,n,Set(GLOBAL(${ARG2})=A)
 exten => s,n,Set(GLOBAL(${ARG2}ans)=${NOW})
