--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -384,6 +384,22 @@ same => n,Set(AGENTNAME=${REPLACE(CALLERID(name),"'",)})
 same => n,PauseQueueMember(,${MemberChanType}/${MemberChannel},,${PAUSETYPE})
 same => n,GotoIf($[${PQMSTATUS} = PAUSED]?agent_paused,1:agent_not_found,1)
 
+exten => _0077X,1,Verbose(2,Pausing member in all queues)
+same => n,Set(MemberChannel=${CHANNEL(peername)})
+same => n,Set(MemberChanType=${CHANNEL(channeltype)})
+same => n,Set(PAUSETYPE=${EXTEN:4})
+same => n,Set(AGENTNAME=${REPLACE(CALLERID(name),"'",)})
+same => n,PauseQueueMember(,${MemberChanType}/${MemberChannel},,${PAUSETYPE})
+same => n,GotoIf($[${PQMSTATUS} = PAUSED]?agent_paused,1:agent_not_found,1)
+
+exten => _0077XX,1,Verbose(2,Pausing member in all queues)
+same => n,Set(MemberChannel=${CHANNEL(peername)})
+same => n,Set(MemberChanType=${CHANNEL(channeltype)})
+same => n,Set(PAUSETYPE=${EXTEN:4})
+same => n,Set(AGENTNAME=${REPLACE(CALLERID(name),"'",)})
+same => n,PauseQueueMember(,${MemberChanType}/${MemberChannel},,${PAUSETYPE})
+same => n,GotoIf($[${PQMSTATUS} = PAUSED]?agent_paused,1:agent_not_found,1)
+
 exten => agent_paused,1,Verbose(2,Agent paused successfully)
 same => n,Set(DB(PAUSECUSTOM/AGENT/${CALLERID(num)})=${PAUSETYPE}:${EPOCH})
 same => n,Set(DB(fop2state/SIP/${CALLERID(num)})=${PAUSETYPE})
