--- a/kamailio-files/kamailio.cfg
+++ b/kamailio-files/kamailio.cfg
@@ -10,17 +10,17 @@
 #!define WITH_XCAPSRV
 #!define WITH_MSRP
 
-#!substdef "!MY_IP_ADDR!192.168.95.110!g"
-#!substdef "!MY_DOMAIN!kamailio-fts.example.com!g"
+#!substdef "!MY_IP_ADDR!172.16.20.88!g"
+#!substdef "!MY_DOMAIN!omnileads-voip.example.com!g"
 #!substdef "!MY_UDP_PORT!5060!g"
 #!substdef "!MY_TCP_PORT!5060!g"
 #!substdef "!MY_TLS_PORT!5061!g"
 #!substdef "!MY_WS_PORT!1080!g"
-#!substdef "!MY_WSS_PORT!14443!g"
+#!substdef "!MY_WSS_PORT!443!g"
 #!substdef "!MY_MSRP_PORT!6060!g"
 #!substdef "!MY_MSRPTCP_PORT!6061!g"
-#!substdef "!MY_ASTERISK!192.168.95.110!g"
-#!substdef "!MY_DB!127.0.0.1!g"
+#!substdef "!MY_ASTERISK!172.16.20.88!g"
+#!substdef "!MY_DB!172.16.20.90!g"
 
 
 #!substdef "!MY_UDP_ADDR!udp:MY_IP_ADDR:MY_UDP_PORT!g"
@@ -904,7 +904,7 @@ route[ASTERISK] {
 	# - update the condition to match your dialing rules for PSTN routing
 #	if(!($rU=~"^(\+|0)[1-9][0-9]{3,20}$"))
 	if(!($rU=~"[5-6][0-9][0-9][0-9]$" || $rU=~"[0][0][0][1][0-9][0-9]$" || $rU=~"[0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9][0-9]$" 
-	|| $rU=~"[3-8][0-9][0-9][0-9][0-9][0-9][0-9]$" || $rU=~"[1][5][2-8][0-9][0-9][0-9][0-9][0-9][0-9]$" || $rU=~"[0][0][7][7][A-Z]{3,20}$"))
+	|| $rU=~"[3-8][0-9][0-9][0-9][0-9][0-9][0-9]$" || $rU=~"[1][5][2-8][0-9][0-9][0-9][0-9][0-9][0-9]$" || $rU=~"[0][0][7][7][A-Z]{3,20}$" || $rU=~"[0][0][7][7][0-9]$" || $rU=~"[0][0][7][7][0-9][0-9]$"))
 	return;
 	
 	# only local users allowed to call
