--- a/asterisk-files/extensions_fts.conf
+++ b/asterisk-files/extensions_fts.conf
@@ -18,7 +18,7 @@ same => n,GotoIf($["${BLACKLIST}" == "0"]?:blacklist,1)
 same => n,Noop(Veo si la llamada saliente la procesa Asternic)
 same => n,Noop(Veo si la llamada saliente la procesa Asternic)
 same => n,NoOp(id campana asociada ${SIP_HEADER(Idcamp)})
-same => n,NoOp(Nombre de la campaña que manda JS: ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)})
+same => n,NoOp(Nombre de la campana que manda JS: ${SIP_HEADER(Nomcamp)} ${SIP_HEADER(Nomcamp)})
 same => n,GotoIf($["${SIP_HEADER(Nomcamp)}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
 same => n,Noop(No es MANUALCALL por ende reviso si es CLICK2CALL)
 same => n,GotoIf($["${CAMPANA}" != ""]?okcall) ; esto se hace con nombre_campaña llamada manual
@@ -36,14 +36,15 @@ same => n,Set(DIAL_PREFIX=${DB(dialprefix/${QDIALER_QUEUE})})
 same => n,Noop(Trunk is ${OUT_${DIAL_TRUNK}})
 same => n,Noop(Dialout number is ${OUTNUM})
 same => n,Noop(Dial options are ${DIAL_TRUNK_OPTIONS})
-same => n,NoOp(compruebo si hay un agente asignado a la llamada, sino no disco !!! )
+same => n,NoOp(compruebo si hay un agente asignado a la llamada, sino no disco !!!)
 same => n,GotoIf($["${QDIALER_AGENT}" != ""]?nextcheck)
 same => n,Noop(NO AGENT?, exit normally with no tracking outbound)
 same => n,MacroExit()
-same => n,NoOp(compruebo si hay una cola asignada a la llamada, sino no disco !!! 
-same => n(nextcheck),GotoIf($["${click2callPreview}" == "true"]?:prevFALSE)
+same => n(nextcheck),NoOp(compruebo si hay una cola asignada a la llamada, sino no disco !!!) 
+same => n,DumpChan()
+same => n,GotoIf($["${origin}" == "click2call"]?:click2callFALSE)
 same => n,Set(QDIALER_QUEUE=${IdCamp}_${CAMPANA})
-same => n(prevFALSE),GotoIf($["${QDIALER_QUEUE}" != ""]?bypass)
+same => n(click2callFALSE),GotoIf($["${QDIALER_QUEUE}" != ""]?bypass)
 same => n,Noop(NO QUEUE, exit normally with no tracking outbound)
 same => n,MacroExit()
 same => n(bypass),Set(PREDIAL_HOOK_RET=BYPASS)
@@ -217,9 +218,9 @@ exten => h,n,Hangup()
 exten => s,1,NoOp("Macro: queuedial-answer UID:${ARG1} GR:${ARG2} Q:${ARG3} A:${ARG4} E:${ARG5}")
 exten => s,n,Set(QDIALER_QUEUE=${ARG3})
 ;exten => s,n,MixMonitor(out-${QDIALER_QUEUE}-${ARG1}.wav,b,/usr/local/parselog/update_mix_mixmonitor.pl ${ARG1} out-${QDIALER_QUEUE}-${ARG1}.wav)
-;exten => s,n,Set(AUDIOHOOK_INHERIT(MixMonitor)=yes)
-;exten => s,n,Set(NOW=${EPOCH})
-;exten => s,n,Set(WD=$[${NOW} - ${ARG5}])
+exten => s,n,Set(AUDIOHOOK_INHERIT(MixMonitor)=yes)
+exten => s,n,Set(NOW=${EPOCH})
+exten => s,n,Set(WD=$[${NOW} - ${ARG5}])
 exten => s,n,Macro(queuelog,${NOW},${ARG1},${ARG3},${ARG4},CONNECT,${WD})
 exten => s,n,Set(GLOBAL(${ARG2})=A)
 exten => s,n,Set(GLOBAL(${ARG2}ans)=${NOW})
@@ -241,10 +242,10 @@ exten => s,n,NoOp("Macro queuedial-answer terminating" )
 ;
 ;exten => s,1,System( echo "${ARG1},${ARG2},${ARG3,${ARG4},${ARG5},${ARG6},${ARG7},${ARG8}" >> /var/log/asterisk/queue_log )
 exten => s,1,GotoIf($["${TIPOLLAMADA}" == "PREVIEW"]?prev,1)
-same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|saliente)
+same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|saliente|${SIP_HEADER(Tipocamp)})
 
 exten => prev,1,Verbose(2, queuelog para camp prev)
-same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|preview)
+same => n,QueueLog(${ARG3},${ARG2},${ARG4},${ARG5},${ARG6}|${ARG7}|${ARG8}|preview|${SIP_HEADER(Tipocamp)})
 
 
 
@@ -471,12 +472,12 @@ same => n,GotoIf($["${TIPOLLAMADA}" == "PREVIEW"]?preview)
 same => n,GotoIf($["${TIPOLLAMADA}" == "IN"]?inbound)
 same => n,Hangup()
 same => n(dialer),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
-same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA})
+same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA}|${SIP_HEADER(Tipocamp)})
 same => n,AGI(omni-grabaciones.php,2,${ID_CLIENTE},${NUMMARCADO},${MEMBERINTERFACE:4},${MONITOR_FILENAME}.${MONITORFORMAT},${ID_CAMPANA},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME}.wav)
 same => n,Hangup()
 same => n(inbound),NoOp(GRA:${MONITOR_FILENAME}.wav - CLI:${NUMMARCADO} - AG:${MEMBERINTERFACE:4} - CODCLI:${ID_CLIENTE} - )
-same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA})
+same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CALLCOMPLETE,${QEHOLDTIME}|||${TIPOLLAMADA}|${SIP_HEADER(Tipocamp)})
 same => n,AGI(omni-grabaciones.php,3,${ID_CLIENTE},${CALLERID(num)},${MEMBERINTERFACE:4},${MONITOR_FILENAME:28}.${MONITORFORMAT},${SIPADDHEADER04:7},${STRFTIME(${EPOCH},,%Y-%m-%d %H:%M:%S)})
 same => n,System(/usr/local/parselog/update_mix_mixmonitor.pl ${UNIQUEID} ${MONITOR_FILENAME:28}.wav)
 same => n,Hangup()
@@ -497,7 +498,7 @@ same => n,Hangup()
 
 [queuelogSub]
 exten => s,1,Verbose(2, voy a queueloguear que se atendio una llamada)
-same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CONNECT,${QEHOLDTIME}|${UNIQUEID}||${TIPOLLAMADA})
+same => n,QueueLog(${QUEUENAME},${CHANNEL(LinkedID)},${MEMBERNAME},CONNECT,${QEHOLDTIME}|${UNIQUEID}||${TIPOLLAMADA}|${SIP_HEADER(Tipocamp)})
 same => n,Return()
 
 
